# dn42-utils

./: .gitignore  AGENTS.md  README.md  TODO  bird.conf_template  create_peer.py  ibgp_peer.conf_template  plan-2.md  plan.md  pyproject.toml  setup_dn42_roa.sh
.github/workflows/: ci.yml
docs/: review-2026-04-19-2-gemini.md  review-2026-04-19-2-gpt.md  review-2026-04-19-3-gemini.md  review-2026-04-19.md  review-2026-04-20-1-gemini.md  review-2026-04-20-1-gpt.md  spec.md
docs/architecture/: auto_peer.md  database.md  deployment.md  network_backends.md  rest_api.md  sync_hub_spoke.md  testing.md  validation.md  web_ui.md
docs/commands/: bgp_peer.md  genconf.md  ibgp_peer.md  init.md  node.md  scan.md  show.md  show_and_del.md  system.md  web.md
docs/reviews/: 2026-05-09-gpt.md  2026-05-19-gpt.md
src/dn42ctl/: _version_info.py  api.py  cli.py  config.py  constants.py  context.py  db.py  db_managed.py  fs.py  migrations.py  node_client.py  node_config.py  paths.py  render.py  serve_bootstrap.py  services.py  validators.py  wg.py
systemd/: dn42ctl-node-once.service  dn42ctl-node-once.timer  dn42ctl-server.service  nginx.dn42ctl.conf.example  server.env.example
tests/: conftest.py  test_api.py  test_api_admin_nodes.py  test_api_bgp_peers.py  test_api_decisions.py  test_api_node_routes.py  test_api_proposals_reports.py  test_api_public_auto_peer.py  test_api_revisions.py  test_cli_node.py  test_cli_node_decisions.py  test_cli_node_push_report.py  test_cli_node_revisions.py  test_cli_node_sync.py  test_config.py  test_db.py  test_db_managed.py  test_db_managed_proposals_reports.py  test_db_managed_revisions.py  test_fs.py  test_node_client.py  test_node_config.py  test_node_status.py  test_render.py  test_serve_bootstrap.py  test_services_auto_peer.py  test_services_bgp.py  test_services_core.py  test_services_crypto_verify.py  test_services_desired_state.py  test_services_dummy.py  test_services_ibgp.py  test_services_init_sys.py  test_services_node_admin.py  test_services_node_admin_self_toml.py  test_services_node_agent.py  test_services_node_apply.py  test_services_proposal_decisions.py  test_services_proposals_reports.py  test_services_registry.py  (+6 more)
web/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/admin/: dashboard.html  index.html
(+68 files in other folders)
