[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dn42ctl"
version = "0.1.0"
description = "DN42 configuration helper CLI"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "jinja2>=3.0.0",
]

[project.scripts]
dn42ctl = "dn42ctl.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dn42ctl = ["templates/*"]
