[project]
name = "dn42ctl"
version = "0.1.0"
description = "DN42 configuration helper CLI"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.0.0",
  "tomli-w>=1.0.0",
  "typer>=0.12.3",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "argon2-cffi>=23.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.11",
    "pyright>=1.1.390",
]

[project.scripts]
dn42ctl = "dn42ctl.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dn42ctl = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "BLE", "C4", "T20", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S105"]
"src/dn42ctl/cli.py" = ["B008", "UP037"]
"src/dn42ctl/api.py" = ["B008"]
"src/dn42ctl/fs.py" = ["SIM105"]
"src/dn42ctl/wg.py" = ["S603", "S607", "S311"]
"src/dn42ctl/render.py" = ["S701"]
"src/dn42ctl/services/core.py" = ["S311", "E402"]
"src/dn42ctl/services/dummy.py" = ["S603", "S607"]
"src/dn42ctl/services/show.py" = ["S603", "S607"]
"src/dn42ctl/services/init_sys.py" = ["S603", "S607", "S310", "F841"]
"src/dn42ctl/services/scan.py" = ["SIM102", "SIM105"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests"]

[tool.coverage.run]
source = ["dn42ctl"]

[tool.coverage.report]
show_missing = true
skip_empty = true
